TODO
* add debug function for binary XML token types
* chunk similar to libesedb page
* code clean up
  - behavior of initialize functions
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

20120310
* worked on reading events

20120307
* worked on reading chunks
* added CRC32 support

20120306
* 2012 update

20111101
* updated configure.ac and m4 files
* updated spec and pc file
* updated README files
* updated common, libcstring, libsystem, libuna, libbfio, libfdatetime,
  libfvalue
* worked on windows codepage 932 and 936 support

20110920
* worked on initial version

20110919
* initial version based on libesedb 20110919
